# typing-protocol-intersection

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
tests/: conftest.py  test-mypy.ini  test_mypy_plugin.py  test_python_module.py
tests/test_past_issues/test_4_mypy_cache/: input.py  test_4_mypy_cache.py
tests/test_past_issues/test_8_non_protocol_member/: input.py  test_8_non_protocol_member.py
tests/testcases/: fails_for_non_protocol_calls.py  fails_for_non_protocols.py  function_return_type_happy_path.py  function_return_type_unhappy_path.py  in_generic_param_happy_path.py  in_generic_param_happy_path_covariant.py  in_generic_param_unhappy_path.py  multiple_params_happy_path.py  multiple_params_unhappy_path.py  protocol_extending_another_builder_happy_path.py  protocol_extending_another_builder_unhappy_path.py  protocol_extending_another_method_happy_path.py  protocol_extending_another_property_happy_path.py
tools/: prepare-pr-after-mypy-bump.sh
typing_protocol_intersection/: __init__.py  mypy_plugin.py  types.py
