[metadata]
name = typing-protocol-intersection
version = 0.1
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klausweiss/typing-protocol-intersection
project_urls =
    Bug Tracker = https://github.com/klausweiss/typing-protocol-intersection/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .