[metadata]
name = typing-protocol-intersection
version = 0.1
description = Protocol intersection for mypy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klausweiss/typing-protocol-intersection
project_urls =
    Bug Tracker = https://github.com/klausweiss/typing-protocol-intersection/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
