[metadata]
name = typing-protocol-intersection
version = 0.5.2
description = Protocol intersection for mypy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/klausweiss/typing-protocol-intersection
project_urls =
    Bug Tracker = https://github.com/klausweiss/typing-protocol-intersection/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Typing :: Typed
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.package_data]
* = py.typed, *.pyi

[options.packages.find]
where = .
